it/ls/kuma/resources/svc.yaml
---
apiVersion: v1
kind: Service
metadata:  
  name: kuma
  namespace: it-kuma
spec:
  selector:    
    component: uptime-kuma
  type: ClusterIP
  ports:  
  - name: http
    port: 3001
    targetPort: 3001
    protocol: TCP
